--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -115,6 +115,10 @@
     "group-section": "Administrar salas",
     "group-userRole": "Administrar roles de usuario",
     "dailyMenu": "Menu del dia",
+    "dailyMenuList": "Listar",
+    "dailyMenuNew": "Nuevo",
+    "dailyMenuEdit": "Editar",
+    "dailyMenuDelete": "Eliminar",
     "stockControl": "Control de Stock"
   },
   
