--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -146,5 +146,9 @@
     "confirmPassword": "Confirmar contraseña",
     "userPasswordDoesntMatch": "Las contrasenas no coinciden",
     "enterPin": "Ingrese el PIN"
+  },
+
+  "Login": {
+    "keepLoggedIn": "Mantener sesión iniciada"
   }
 }
